v0.19.4/_sources/_api/ophyd_async/ophyd_async.epics.advimba.md.txt
# {py:mod}`ophyd_async.epics.advimba`

```{py:module} ophyd_async.epics.advimba
```

```{autodoc2-docstring} ophyd_async.epics.advimba
:allowtitles:
```

## Module Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`VimbaDetector <ophyd_async.epics.advimba.VimbaDetector>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDetector
    :summary:
    ```
* - {py:obj}`VimbaDriverIO <ophyd_async.epics.advimba.VimbaDriverIO>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO
    :summary:
    ```
* - {py:obj}`VimbaTriggerLogic <ophyd_async.epics.advimba.VimbaTriggerLogic>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic
    :summary:
    ```
* - {py:obj}`VimbaConvertFormat <ophyd_async.epics.advimba.VimbaConvertFormat>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat
    :summary:
    ```
* - {py:obj}`VimbaTriggerSource <ophyd_async.epics.advimba.VimbaTriggerSource>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource
    :summary:
    ```
* - {py:obj}`VimbaOverlap <ophyd_async.epics.advimba.VimbaOverlap>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaOverlap
    :summary:
    ```
* - {py:obj}`VimbaExposeOutMode <ophyd_async.epics.advimba.VimbaExposeOutMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaExposeOutMode
    :summary:
    ```
````

### API

````{py:class} VimbaDetector(prefix: str, *writer_factories: ~ophyd_async.epics.adcore.ADWriterFactory, driver_suffix='cam1:', override_deadtime: float | None = None, plugins: dict[str, ~ophyd_async.epics.adcore.NDPluginBaseIO] | None = None, config_sigs: ~collections.abc.Sequence[~ophyd_async.core.SignalR] = (), name: str = '')
:canonical: ophyd_async.epics.advimba.VimbaDetector

Bases: {py:obj}`ophyd_async.epics.adcore.AreaDetector`\[{py:obj}`ophyd_async.epics.advimba.VimbaDriverIO`\]

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDetector
```

````

`````{py:class} VimbaDriverIO(prefix: str, with_pvi: bool = False, name: str = '')
:canonical: ophyd_async.epics.advimba.VimbaDriverIO

Bases: {py:obj}`ophyd_async.epics.adcore.ADBaseIO`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO
```

````{py:attribute} convert_pixel_format
:canonical: ophyd_async.epics.advimba.VimbaDriverIO.convert_pixel_format
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.advimba.VimbaConvertFormat], ophyd_async.epics.core.PvSuffix.rbv('ConvertPixelFormat')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO.convert_pixel_format
```

````

````{py:attribute} trigger_source
:canonical: ophyd_async.epics.advimba.VimbaDriverIO.trigger_source
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.advimba.VimbaTriggerSource], ophyd_async.epics.core.PvSuffix.rbv('TriggerSource')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO.trigger_source
```

````

````{py:attribute} trigger_mode
:canonical: ophyd_async.epics.advimba.VimbaDriverIO.trigger_mode
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.core.OnOff], ophyd_async.epics.core.PvSuffix.rbv('TriggerMode')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO.trigger_mode
```

````

````{py:attribute} trigger_overlap
:canonical: ophyd_async.epics.advimba.VimbaDriverIO.trigger_overlap
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.advimba.VimbaOverlap], ophyd_async.epics.core.PvSuffix.rbv('TriggerOverlap')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO.trigger_overlap
```

````

````{py:attribute} exposure_mode
:canonical: ophyd_async.epics.advimba.VimbaDriverIO.exposure_mode
:type: ~typing.Annotated[~ophyd_async.core.SignalRW[~ophyd_async.epics.advimba.VimbaExposeOutMode], ophyd_async.epics.core.PvSuffix.rbv('ExposureMode')]
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaDriverIO.exposure_mode
```

````

`````

`````{py:class} VimbaTriggerLogic
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic

Bases: {py:obj}`ophyd_async.core.DetectorTriggerLogic`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic
```

````{py:attribute} driver
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.driver
:type: ~ophyd_async.epics.advimba.VimbaDriverIO
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.driver
```

````

````{py:attribute} override_deadtime
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.override_deadtime
:type: float | None
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.override_deadtime
```

````

````{py:method} config_sigs() -> set[~ophyd_async.core.SignalR]
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.config_sigs

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.config_sigs
```

````

````{py:method} get_deadtime(config_values: ~ophyd_async.core.SignalDict) -> float
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.get_deadtime

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.get_deadtime
```

````

````{py:method} prepare_internal(num: int, livetime: float, deadtime: float)
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_internal
:async:

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_internal
```

````

````{py:method} prepare_edge(num: int, livetime: float)
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_edge
:async:

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_edge
```

````

````{py:method} prepare_level(num: int)
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_level
:async:

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.prepare_level
```

````

````{py:method} default_trigger_info()
:canonical: ophyd_async.epics.advimba.VimbaTriggerLogic.default_trigger_info
:async:

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerLogic.default_trigger_info
```

````

`````

`````{py:class} VimbaConvertFormat()
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat
```

````{py:attribute} NONE
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat.NONE
:value: >
   'None'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat.NONE
```

````

````{py:attribute} MONO8
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat.MONO8
:value: >
   'Mono8'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat.MONO8
```

````

````{py:attribute} MONO16
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat.MONO16
:value: >
   'Mono16'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat.MONO16
```

````

````{py:attribute} RGB8
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat.RGB8
:value: >
   'RGB8'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat.RGB8
```

````

````{py:attribute} RGB16
:canonical: ophyd_async.epics.advimba.VimbaConvertFormat.RGB16
:value: >
   'RGB16'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaConvertFormat.RGB16
```

````

`````

`````{py:class} VimbaTriggerSource()
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource
```

````{py:attribute} FREERUN
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.FREERUN
:value: >
   'Freerun'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.FREERUN
```

````

````{py:attribute} LINE1
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.LINE1
:value: >
   'Line1'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.LINE1
```

````

````{py:attribute} LINE2
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.LINE2
:value: >
   'Line2'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.LINE2
```

````

````{py:attribute} FIXED_RATE
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.FIXED_RATE
:value: >
   'FixedRate'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.FIXED_RATE
```

````

````{py:attribute} SOFTWARE
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.SOFTWARE
:value: >
   'Software'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.SOFTWARE
```

````

````{py:attribute} ACTION0
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.ACTION0
:value: >
   'Action0'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.ACTION0
```

````

````{py:attribute} ACTION1
:canonical: ophyd_async.epics.advimba.VimbaTriggerSource.ACTION1
:value: >
   'Action1'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaTriggerSource.ACTION1
```

````

`````

`````{py:class} VimbaOverlap()
:canonical: ophyd_async.epics.advimba.VimbaOverlap

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaOverlap
```

````{py:attribute} OFF
:canonical: ophyd_async.epics.advimba.VimbaOverlap.OFF
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaOverlap.OFF
```

````

````{py:attribute} PREV_FRAME
:canonical: ophyd_async.epics.advimba.VimbaOverlap.PREV_FRAME
:value: >
   'PreviousFrame'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaOverlap.PREV_FRAME
```

````

`````

`````{py:class} VimbaExposeOutMode()
:canonical: ophyd_async.epics.advimba.VimbaExposeOutMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaExposeOutMode
```

````{py:attribute} TIMED
:canonical: ophyd_async.epics.advimba.VimbaExposeOutMode.TIMED
:value: >
   'Timed'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaExposeOutMode.TIMED
```

````

````{py:attribute} TRIGGER_WIDTH
:canonical: ophyd_async.epics.advimba.VimbaExposeOutMode.TRIGGER_WIDTH
:value: >
   'TriggerWidth'

```{autodoc2-docstring} ophyd_async.epics.advimba.VimbaExposeOutMode.TRIGGER_WIDTH
```

````

`````
